kustomize-mock-ec/mock-ec-secondary/sit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mock-ec-secondary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /mock-ec-secondary-sit(/|$)(.*)
            backend:
              service:
                name: mock-ec-sec
                port:
                  number: 8089
